--- a/site-Ola-Mundo/index.html
+++ b/site-Ola-Mundo/index.html
@@ -6,7 +6,7 @@
     <title>Primeiro site em repositório</title>
 </head>
 <body>
-    <h1>Olá mundo</h1>
+    <h1>Olá,mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate debitis! Consequatur, maiores? Quas ullam, fugit dolorum ad deleniti voluptatum repellat porro possimus sit architecto repellendus, eos eius, ipsa aperiam!</p>
 </body>
